--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
-    "react-datepicker": "^6.9.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
-    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
